--- a/package.json
+++ b/package.json
@@ -7,18 +7,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3-react/core": "^8.2.3",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
     "bcryptjs": "^2.4.3",
-    "bitcoin-core": "^4.2.0",
     "bootstrap": "^5.3.2",
     "cloudinary": "^2.3.0",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ethers": "^6.15.0",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
     "framer-motion": "^10.16.4",
-    "git": "^0.1.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "paytmchecksum": "^1.5.1",
@@ -27,20 +29,24 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "request": "^2.88.2",
     "room-populate": "^1.0.17",
     "sqlite3": "^5.1.7",
     "swiper": "^10.3.1",
+    "uuid": "^11.1.0",
     "validator": "^13.12.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^4.16.0"
   },
   "scripts": {
-    "predeploy": "concurrently \"node server/server.js\" \"npm run build\"",
-    "deploy": "concurrently \"node server/server.js\" \"gh-pages -d build\"",
-    "start": "concurrently \"node server/server.js\" \"react-scripts start\"",
-    "build": "concurrently \"node server/server.js\" \"react-scripts build\"",
-    "test": "concurrently \"node server/server.js\" \"react-scripts test\"",
-    "eject": "concurrently \"node server/server.js\" \"react-scripts eject\""
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "node server/server.js",
+    "client": "react-scripts start",
+    "start": "npm run server",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
